...
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:contentDescription="@string/close_dialog"
                android:src="@drawable/ic_close_black_24dp"
                app:tint="@color/white" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/albums_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="6dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />

...
