<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_albums_list"
        android:icon="@drawable/ic_library_music_black_24dp"
        android:title="@string/title_albums" />

    <item
        android:id="@+id/navigation_performers_list"
        android:icon="@drawable/ic_headset_black_24dp"
        android:title="@string/title_performers" />

    <item
        android:id="@+id/navigation_collectors_list"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_collectors" />

    <item
        android:id="@+id/navigation_album_create"
        android:icon="@drawable/ic_library_music_black_24dp"
        android:title="@string/title_album_create" />

</menu>