...
                android:src="@drawable/ic_close_black_24dp"
                app:tint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/album_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/green_500"
            android:orientation="vertical"
            android:paddingHorizontal="12dp"
...
