<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".collectors.details.CollectorsDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:paddingTop="10dp"
            android:paddingHorizontal="8dp"
            android:background="@color/green_500">

            <ImageButton
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/close"
                android:src="@drawable/ic_close_black_24dp"
                android:background="@null"
                app:tint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/collector_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingHorizontal="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/green_500">

            <TextView
                android:id="@+id/collector_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <TextView
                android:id="@+id/collector_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textAppearance="?attr/textAppearanceBody2" />

            <TextView
                android:id="@+id/collector_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textAppearance="?attr/textAppearanceBody2" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/collector_albums_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>