<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".performers.details.PerformersDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_500"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp"
            android:paddingTop="12dp">

            <ImageButton
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/close_dialog"
                android:src="@drawable/ic_close_black_24dp"
                app:tint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/performer_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@color/green_500"
            android:orientation="vertical"
            android:paddingHorizontal="12dp"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/performer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textColor="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/performer_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_margin="4dp"
            android:justificationMode="inter_word"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/performer_albums_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="6dp"
            android:paddingBottom="16dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>